--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "frontend",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "private": true,
   "homepage": "http://consciouswood.com/dev",
   "dependencies": {
@@ -16,6 +16,7 @@
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.6",
     "react-spring": "^9.4.5",
     "web-vitals": "^2.1.4"
   },
